# jksh-ai

./: .gitignore  README.md  start-financial-ai.sh
backend/: Cargo.toml
backend/src/: ai.rs  auth.rs  cache.rs  config.rs  database.rs  error.rs  financial.rs  main.rs  models.rs  services.rs  utils.rs  whatsapp.rs
backend/src/api/: handlers.rs
