[package]
name = "jksh_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
bcrypt = "0.15"
jsonwebtoken = "9.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"
reqwest = { version = "0.11", features = ["json"] }
redis = { version = "0.24", features = ["tokio-comp"] }
async-trait = "0.1"
futures = "0.3"
rayon = "1.8"
dashmap = "5.5"
parking_lot = "0.12"
once_cell = "1.19"
config = "0.14"
rand = "0.8"
sha2 = "0.10"
tokio-stream = "0.1"
# Financial data and analysis
rust_decimal = { version = "1.34", features = ["serde"] }
# Database enhancements for financial data
bigdecimal = { version = "0.4", features = ["serde"] }
# Additional utilities
base64 = "0.22"
url = "2.5"
mime = "0.3"
